--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-
+<app-header (featuredSelected)="onNavigate($event)" ></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-header></app-header>
-      <h2>I'm working</h2>
-      
+      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
     </div>
   </div>
 </div>
