--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,40 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img [src]="detailRecipe.imagePath" alt="" style="width:250px;" class="img-responsive">
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h1>{{detailRecipe.name}}</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="btn-group"
+        appDropdown
+        >
+            <button class="btn btn-primary dropdown-toggle">
+                Manage Recipe <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#" (click)="addIngredientToShoppingList()">To shopping List</a></li>
+                <li><a href="#">Edit Recipe</a></li>
+                <li><a href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        {{detailRecipe.description}}
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let ingredient of detailRecipe.ingredients">
+        {{ingredient.name}}  - {{ingredient.amount}} 
+        </li>
+        </ul>
+    </div>
+</div>
