--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,1 +1,14 @@
-<p>recipes works!</p>
+<div class="col">
+    <div class="col-md-5">
+        <app-recipe-list></app-recipe-list>
+    </div>
+    <div class="col-md-7">
+        <app-recipe-detail
+        *ngIf="finalSelectedRecipe; else noRecipeSelected" 
+        [detailRecipe]="finalSelectedRecipe"
+        ></app-recipe-detail>
+        <ng-template #noRecipeSelected>
+            <p>Please select recipe</p>
+        </ng-template>
+    </div>
+</div>
