hoan thanh setup route cho recipe-app

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,12 +3,13 @@
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail
+        <router-outlet></router-outlet>
+        <!-- <app-recipe-detail
         *ngIf="finalSelectedRecipe; else noRecipeSelected" 
         [detailRecipe]="finalSelectedRecipe"
         ></app-recipe-detail>
         <ng-template #noRecipeSelected>
             <p>Please select recipe</p>
-        </ng-template>
+        </ng-template> -->
     </div>
 </div>
