--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,9 +17,9 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#" (click)="addIngredientToShoppingList()">To shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a  (click)="addIngredientToShoppingList()" style="cursor:pointer">To shopping List</a></li>
+                <li><a style="cursor:pointer" (click)="onEditRecipe()">Edit Recipe</a></li>
+                <li><a style="cursor:pointer">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
