--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" 
+<a
+[routerLink]="['/recipes',index]"
+routerLinkActive="active"
+style="cursor:pointer"
 class="list-group-item clearfix" 
 (click)="selectRecipe()"
 >
